<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_news_black_24dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_mywork"
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/title_mywork" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />
    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_schedule_black_24dp"
        android:title="@string/title_schedule" />
    <item
    android:id="@+id/navigation_mymarks"
    android:icon="@drawable/ic_mymark_black_24dp"
    android:title="@string/title_mymarks" />

</menu>
