<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.koalait.sierra.model.Model" />
    </data>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/fragment_padding"
                android:weightSum="1"
                tools:context="com.koalait.sierra.fragments.DashboardFragment">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/title_for_tomorrow"
                    android:textSize="@dimen/fragment_title" />

                <ExpandableListView
                    android:id="@+id/listView_dash_work"
                    android:layout_width="match_parent"
                    android:layout_height="140dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/fragment_divider"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@color/colorGray" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:text="@string/title_news"
                    android:textSize="@dimen/fragment_title" />

                <ExpandableListView
                    android:id="@+id/listView_dash_news"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_weight="0.14" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/title_next_Lesson"
                    android:textSize="@dimen/fragment_title" />

                <TextView
                    android:id="@+id/nextLesson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="50dp"
                    android:text="@{model.nextLesson}"
                    android:textSize="15dp" />

            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>
</layout>